--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #666666; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #333333; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #03c4eb; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #dada2c; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -30,11 +30,11 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #ffffff;  /* The default color of the main navmenu links */
-  --nav-hover-color: #03c4eb; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: white;/* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #666666; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #03c4eb; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-dropdown-hover-color: #dada2c; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -86,6 +86,15 @@ h6 {
   color: var(--heading-color);
   font-family: var(--heading-font);
 }
+
+.sitename {
+  font-size: 70px !important;
+  font-weight: 900 !important;
+  letter-spacing: 10px;
+  color: white !important;
+}
+
+
 
 /* PHP Email Form Messages
 ------------------------------*/
@@ -143,7 +152,7 @@ h6 {
 # Global Header
 --------------------------------------------------------------*/
 .header {
-  --background-color: rgba(0, 0, 0, 0);
+  --background-color: #dada2c;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   color: var(--default-color);
@@ -170,13 +179,14 @@ h6 {
 }
 
 .scrolled .header {
-  box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0 18px  rgb(218, 218, 44);
 }
 
 /* Global Header on Scroll
 ------------------------------*/
 .scrolled .header {
-  --background-color: rgba(0, 0, 0, 0.8);
+  /* --background-color: rgba(0, 0, 0, 0.8); */
+  background-color: rgb(218, 218, 44);
 }
 
 /*--------------------------------------------------------------
@@ -204,7 +214,7 @@ h6 {
   .navmenu a:focus {
     color: var(--nav-color);
     padding: 18px 15px;
-    font-size: 16px;
+    font-size: 20px;
     font-family: var(--nav-font);
     font-weight: 400;
     display: flex;
@@ -777,37 +787,43 @@ section,
 .about .content p:last-child {
   margin-bottom: 0;
 }
+  .about .content .read-more {
+    background: var(--accent-color);
+    color: var(--contrast-color);
+    font-family: var(--heading-font);
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding: 12px 24px ;
+    border-radius: 5px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between; /* Это позволит прижать элементы */
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s;
+    width: auto;
+    height: 50px; /* Устанавливаем фиксированную высоту кнопки */
+  }
 
-.about .content .read-more {
-  background: var(--accent-color);
-  color: var(--contrast-color);
-  font-family: var(--heading-font);
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 1px;
-  padding: 12px 24px;
-  border-radius: 5px;
-  transition: 0.3s;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
+  .about .content .read-more span {
+    margin-right: 0px;
+    flex-grow: 1; /* Даем заголовку гибкость, чтобы он занимал доступное пространство */
+  }
 
-.about .content .read-more i {
-  font-size: 18px;
-  margin-left: 5px;
-  line-height: 0;
-  transition: 0.3s;
-}
+  .about .content .read-more {
+    padding: 0 0 0 16px; /* Слева чуть оставим, справа — 0 */
+  }
 
-.about .content .read-more:hover {
-  background: color-mix(in srgb, var(--accent-color), black 20%);
-  padding-right: 19px;
-}
+  .about .content .read-more:hover {
+    background: color-mix(in srgb, var(--accent-color), black 20%);
+  }
 
-.about .content .read-more:hover i {
-  margin-left: 10px;
-}
+  .about .content .read-more:hover i {
+    margin-left: 10px;
+  }
+
+
 
 /*--------------------------------------------------------------
 # Services Section
