--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,6 +299,19 @@ h6 {
   }
 }
 
+  @media screen and (max-width: 768px) {
+    .hero-bg {
+      filter: brightness(0.7); /* Затемнение для мобильных устройств */
+    }
+  }
+  
+  @media screen and (min-width: 769px) {
+    .hero-bg {
+      filter: brightness(0.5); /* Более сильное затемнение для десктопа */
+    }
+  }
+
+
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
